--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@
   font-style: normal;
   font-weight: 900;
   line-height: 95px;
-  /* 131.944% */
+  
 }
 
 .offer {
@@ -156,6 +156,16 @@
   justify-content: center;
   align-items: center;
 }
+.span-color{
+  color: black;
+  text-align: center;
+  font-family: Inter;
+  font-size: 32px;
+  font-weight: 600;
+  line-height: 56px;
+  margin-top: 100px;
+  display: contents;
+}
 
 .place .content {
   color: #f00;
@@ -174,15 +184,14 @@
   justify-content: center;
   align-items: center;
   gap: 10px;
-  color: #f00;
+  color: red;
 }
 
 .place .button-text {
-  color: black;
+  color: red;
   text-align: center;
   font-family: Inter;
   font-size: 20px;
-
   font-weight: 700;
 }
 
@@ -453,7 +462,7 @@
   margin-top: 40px;
 }
 
-.ddssubscribe-lorem {
+.subscribe-lorem {
   color: rgba(7, 2, 17, 0.60);
   text-align: center;
   font-family: Inter;
@@ -497,37 +506,38 @@
 
 .upper-footer {
 
-  display: flex;
+  display:flex;
+  margin-top: 120px;
 
 }
-
-.upper-footer .footer-text {
+.footer-text {
+  white-space: nowrap;
   color: #FFF;
   font-family: Inter;
   font-size: 24px;
   font-weight: 500;
   line-height: 40px;
-  margin-top: 120px;
-  padding-top: 5px;
-  padding-left: 100px;
-
+    padding-top: 5px;
+   padding-left: 70px;
+  
 }
 
-.upper-footer .call-icon {
+.call-icon {
+  display: inline-block;
   width: 24px;
   height: 24px;
-  flex-shrink: 0;
-  display: flex;
-  padding-top: 150px;
-  padding-right: 450px;
+  padding-left: 520px;
+  
+
+ 
 }
 
-.call-icon .number {
+.number {
+  display: inline-block;
+  margin-left: 5px;
   color: white;
-  display: inline;
+
 }
-
-
 .line {
   background: rgba(255, 255, 255, 0.15);
   width: 100%;
@@ -542,8 +552,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-left: 500px;
+  padding-left: 600px;
   padding-top: 20px;
+  margin: 5px;
 
 }
 
@@ -568,13 +579,15 @@
   font-weight: 500;
   line-height: normal;
   padding-left: 140px;
-  padding-top: 90px;
+  padding-top: 30px;
 }
 
-.last-section .text {
+ .footertext {
   color: white;
-    padding-left: 1200px;
+   display: inline;
   font-family: Inter;
   font-size: 24px;
   font-weight: 500;
+  padding-left: 700px;
+  padding-top: 9px;
 }
